2010-06-06  Stefano Lattarini  <stefano.lattarini@gmail.com>
	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Fix distcheck failure with distributed generated parallel tests.
	* tests/Makefile.am ($(parallel_tests)): Cope with $(srcdir)
	being different from the value at developer `make dist' time.
	* tests/defs.in: Protect against mutiple inclusion, by using ...
	($am_defs_included): ... this new variable.
	($srcdir): Do not compute, but simply define to `@abs_srcdir@'
	as substituted by configure.
	Report, suggestions and first fix by Ralf Wildenhues, final
	patch by Stefano Lattarini.

2010-06-06  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Improve tests link*.test (enable `errexit' shell flag).
	* tests/link_c_cxx.test: Enable `errexit shell flag, and related
	changes.  Also, do not create useless source files.
	* tests/link_dist.test: Likewise.
	* tests/link_f90_only.test: Likewise.
	* tests/link_f_only.test: Likewise.
	* tests/link_fc.test: Likewise.
	* tests/link_fccxx.test: Likewise.
	* tests/link_fcxx.test: Likewise.

2010-06-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>

	Improve ext.test semantics, avoid OpenBSD sh errexit issue.
	* tests/ext.test: Inside shell compound command, use
	`if $cmd; then Exit 1; fi' rather than `$cmd && Exit 1', to
	fix failure with OpenBSD sh introduced with last patch.
	Actually ensure that a rule for .EXT.o is created for each
	known extension EXT.

2010-06-06  Stefano Lattarini  <stefano.lattarini@gmail.com>

	Enable `errexit' shell flag in some test scripts.
	* tests/dash.test: Enable `errexit' shell flag, and related
	changes.
	* tests/defun.test: Likewise.
	* tests/defun2.test: Likewise.
	* tests/dejagnu.test: Likewise.
	* tests/double.test: Likewise.
	* tests/distcom2.test: Likewise.
	* tests/empty2.test: Likewise.
	* tests/empty3.test: Likewise.
	* tests/empty4.test: Likewise.
	* tests/exdir.test: Likewise.
	* tests/ext.test: Likewise.
	* tests/extra.test: Likewise.
	* tests/extra2.test: Likewise.