@@ -1,3 +1,9 @@
+2010-06-06  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	Coverage for aclocal diagnosing underquoted macros.
+	* tests/acloca23.test: New test.
+	* tests/Makefile.am: Update.
+
 2010-06-06  Stefano Lattarini  <stefano.lattarini@gmail.com>
 	    Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
